<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E6E6E6"
    android:orientation="vertical" >
    
 <AutoCompleteTextView
     android:id="@+id/ingredient_name_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hint="@string/add_ingredient_hint"
     android:inputType="text"
   />
 
  <EditText
     android:id="@+id/ingredient_amount_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hint="@string/add_ingredient_quantity_hint"
     android:inputType="text"
   />
 <Button 
     android:id="@+id/isubmit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/create_button"
     android:layout_margin="5dp"
     android:background="#00CC00"
     android:minHeight="0dp"
     android:minWidth="0dp"
     android:layout_gravity="center"
     />
 <Button 
    	android:id="@+id/addi_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_margin="5dp"
        android:background="#FF0000"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_gravity="center"
    />
</LinearLayout>
