<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E6E6E6"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/add_ingredient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient" />
    <Button 
        android:id="@+id/add_recipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe" />
    <Button 
        android:id="@+id/add_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_margin="5dp"
        android:background="#FF0000"
        android:minHeight="0dp"
        android:minWidth="0dp"
    />

</LinearLayout>
